# trust-agent-desktop

./: .env.example  .gitignore  BUILD-SPEC.md  CLAUDE.md  COMPLETE-FINISH-SHIP.md  COMPLETE-FIX-VERIFY-MASTER-PROMPT.md  CREDENTIAL-STATUS.md  FRONTEND-GAP-REPORT.md  FRONTEND-SELF-AUDIT-BUILD.md  FULL-SYSTEMS-REPORT.md  OVERNIGHT-STATUS-REPORT.md  OVERNIGHT-TEST-REPORT-MARKETPLACE-MOBILE.md  OVERNIGHT-TEST-REPORT.md  PHASE-0-VERIFICATION.md  PRODUCTION-FINAL-MASTER.md  README.md  ROLES-CLAUDE.md  SECURITY-VERIFICATION.md  SMOKE-TEST-FINAL.md  TRUST_AGENT_MANIFEST.json  VERIFICATION-REPORT.md  VISION-TO-CODE-MASTER.md  expand_all_b2b.py  expand_prompts.py  expand_topup.py  expand_tutors.py  expand_tutors2.py  expand_tutors3.py  expand_tutors4.py  index.html  package-lock.json  package.json  vite.config.ts
agent-runtime/: config.py  main.py  requirements.txt
agent-runtime/runtime/: audit.py  memory.py  orchestrator.py  tools.py
agent-runtime/voice/: pipeline.py  stt.py  tts.py
docs/: FINANCIAL-MODEL.md  PITCH-DECK.md  TOKENOMICS.md  WHITEPAPER.md
prisma/: schema.prisma  seed.ts
scripts/: GENERATE-MANIFEST.md  fix-phase0-gaps.ts  generate-avatars.ts  generate-manifest.ts  seedAmbientAudio.ts  seedVisionData.ts  verify-phase0.ts
src/: App.tsx  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: agent-fs.json  default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  audio.rs  brain.rs  file_upload.rs  mod.rs  permissions.rs  system.rs  voice_clone.rs  wake_word.rs
src-tauri/src/sidecar/: mod.rs
(+466 files in other folders)
